--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.2",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -24,7 +25,8 @@
     "module-alias": "^2.2.3",
     "mongoose": "^9.1.5",
     "morgan": "^1.10.1",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "mysql2": "^3.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
