--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.3",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.2",
     "cookie-parser": "^1.4.7",
@@ -21,13 +22,16 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
+    "firebase": "^12.9.0",
+    "firebase-admin": "^13.6.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "module-alias": "^2.2.3",
     "mongoose": "^9.1.5",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "mysql2": "^3.16.3"
+    "mysql2": "^3.16.3",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
